[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Graphic/player_sheet.png" type="Texture" id=2]
[ext_resource path="res://Sounds/146770__qubodup__rocket-boost-engine-loop.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/laser-soundr.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Player/Wepon.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Bullets/Bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Puls.tscn" type="PackedScene" id=7]
[ext_resource path="res://Graphic/explosion 3.png" type="Texture" id=8]
[ext_resource path="res://Sounds/explosions_1.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/player_got_hit.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 97.2468, 44.147 )

[sub_resource type="Animation" id=2]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Gradient" id=4]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 1, 1, 1, 0.0961914, 0, 0.769531, 1 )

[sub_resource type="GradientTexture" id=5]

flags = 4
gradient = SubResource( 4 )
width = 2048

[sub_resource type="Curve" id=6]

min_value = -200.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0, -25.7813 ), 0.0, 0.0, 0, 0, Vector2( 1, -133.203 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]

flags = 4
width = 2048
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.575195 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]

flags = 4
width = 2048
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 0, 12, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.0
linear_accel_curve = SubResource( 7 )
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 50.0
angle_random = 1.0
scale = 4.0
scale_random = 0.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 5 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Initial Velocity", "Linear Accel" ]

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=12]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 900 ), Vector2( 300, 900 ), Vector2( 300, 600 ) ]
}

[sub_resource type="ParticlesMaterial" id=14]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 70, 70, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 1.04677e-042
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.2
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 3.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Animation", "Emission Shape", "Scale" ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
"Player",
]]

scale = Vector2( 0.8, 0.8 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "collision" ]
__meta__ = {
"_edit_group_": true
}
live = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

light_mask = 2
texture = ExtResource( 2 )
vframes = 3
hframes = 9
frame = 13
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Shoot = SubResource( 2 )
anims/Stop = SubResource( 3 )
blend_times = [  ]

[node name="Area2D" type="Area2D" parent="." index="2" groups=[
"player",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D" index="0"]

build_mode = 0
polygon = PoolVector2Array( -44.2162, -19.4422, -58.4858, 8.85915, -89.4033, 25.7449, -91.3059, 41.6792, 93.2477, 41.4414, 88.0155, 24.5557, 62.3302, 10.9996, 39.9745, -20.3936, -1.6452, -31.8092 )

[node name="Particles2D" type="Particles2D" parent="." index="3"]

show_behind_parent = true
position = Vector2( -26.3382, 44.8943 )
rotation = 1.5708
emitting = true
amount = 70
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 10 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="Particles2D2" type="Particles2D" parent="." index="4"]

show_behind_parent = true
position = Vector2( 26.6618, 44.8943 )
rotation = 1.5708
emitting = true
amount = 70
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 10 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 6.49801
bus = "Master"
area_mask = 1

[node name="LaserAudio2D" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "laser"

[node name="Animation" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = "walk_in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/X = SubResource( 11 )
anims/god_mode = SubResource( 12 )
anims/walk_in = SubResource( 13 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Wepon" type="Node" parent="." index="8"]

script = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
bullet = ExtResource( 6 )
puls = ExtResource( 7 )
lvl = 0

[node name="God_mode_timer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Bombs" type="Particles2D" parent="." index="10"]

position = Vector2( 0, 25 )
scale = Vector2( 1.2, 1.2 )
emitting = false
amount = 15
lifetime = 3.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 14 )
texture = ExtResource( 8 )
normal_map = null
h_frames = 8
v_frames = 8
_sections_unfolded = [ "Process Material", "Transform" ]

[node name="BombsAudio" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Power_timers" type="Node" parent="." index="12"]

editor/display_folded = true

[node name="TSpeed" type="Timer" parent="Power_timers" index="0"]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = false

[node name="TDouble" type="Timer" parent="Power_timers" index="1"]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = false

[node name="TookDamage" type="AudioStreamPlayer" parent="." index="13"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="timeout" from="God_mode_timer" to="." method="_on_God_mode_timer_timeout"]

[connection signal="timeout" from="Power_timers/TSpeed" to="Wepon" method="_on_TSpeed_timeout"]

[connection signal="timeout" from="Power_timers/TDouble" to="Wepon" method="_on_TDouble_timeout"]


